moved streaming process output into processoutput4j project; Exec now allows stopping of process as well