@@ -26,11 +26,11 @@ import adams.core.QuickInfoHelper;
 import adams.core.Utils;
 import adams.core.base.BaseText;
 import adams.core.io.PlaceholderDirectory;
-import adams.core.io.streamingprocess.OutputType;
-import adams.core.io.streamingprocess.StreamingProcessOutput;
-import adams.core.io.streamingprocess.StreamingProcessOwner;
 import adams.flow.core.RunnableWithLogging;
 import adams.flow.core.Token;
+import com.github.fracpete.processoutput4j.core.StreamingProcessOutputType;
+import com.github.fracpete.processoutput4j.core.StreamingProcessOwner;
+import com.github.fracpete.processoutput4j.output.StreamingProcessOutput;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -151,7 +151,7 @@ public class Command
   protected boolean m_CommandContainsVariable;
 
   /** whether to output stderr instead of stdout or both. */
-  protected OutputType m_OutputType;
+  protected StreamingProcessOutputType m_OutputType;
 
   /** the stdout prefix. */
   protected String m_PrefixStdOut;
@@ -218,7 +218,7 @@ public class Command
 
     m_OptionManager.add(
       "output-type", "outputType",
-      OutputType.STDOUT);
+      StreamingProcessOutputType.STDOUT);
 
     m_OptionManager.add(
       "prefix-stdout", "prefixStdOut",
@@ -384,7 +384,7 @@ public class Command
    *
    * @param value	the output type
    */
-  public void setOutputType(OutputType value) {
+  public void setOutputType(StreamingProcessOutputType value) {
     m_OutputType = value;
     reset();
   }
@@ -394,7 +394,7 @@ public class Command
    *
    * @return 		the output type
    */
-  public OutputType getOutputType() {
+  public StreamingProcessOutputType getOutputType() {
     return m_OutputType;
   }
 
@@ -406,7 +406,7 @@ public class Command
    */
   public String outputTypeTipText() {
     return
-      "Determines the output type; if " + OutputType.BOTH + " is selected "
+      "Determines the output type; if " + StreamingProcessOutputType.BOTH + " is selected "
 	+ "then an array is output with stdout as first element and stderr as "
 	+ "second";
   }
@@ -509,13 +509,13 @@ public class Command
     m_ProcessOutput = new StreamingProcessOutput(this);
     m_Monitor = new RunnableWithLogging() {
       private static final long serialVersionUID = -4475355379511760429L;
-      protected Process m_Process;
       @Override
       protected void doRun() {
         try {
-	  m_Process = Runtime.getRuntime().exec(fCmd, null, m_WorkingDirectory.isEmpty() ? null : new PlaceholderDirectory(m_WorkingDirectory));
-	  m_ProcessOutput.monitor(fCmd, null, m_Process);
-	  m_Process.destroy();
+          ProcessBuilder builder = new ProcessBuilder(fCmd);
+          if (!m_WorkingDirectory.isEmpty())
+            builder.directory(new PlaceholderDirectory(m_WorkingDirectory).getAbsoluteFile());
+	  m_ProcessOutput.monitor(builder);
 	}
 	catch (Exception e) {
           m_ExecutionFailure = new IllegalStateException("Failed to execute: " + fCmd, e);
@@ -525,8 +525,8 @@ public class Command
       }
       @Override
       public void stopExecution() {
-        if (m_Process != null)
-          m_Process.destroy();
+        if (m_ProcessOutput != null)
+          m_ProcessOutput.destroy();
 	super.stopExecution();
       }
     };
@@ -541,7 +541,7 @@ public class Command
    * @param line	the line to add
    * @param stdout	whether stdout or stderr
    */
-  public void add(String line, boolean stdout) {
+  public void processOutput(String line, boolean stdout) {
     if (stdout)
       m_Output.add(m_PrefixStdOut + line);
     else
